--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 Dashboard...</h1>
 
             <!-- Year Selector (NEW) -->
-            <div class="flex justify-center items-center gap-2 mt-2">
+            <div class="flex flex-col sm:flex-row justify-center items-center gap-2 mt-2">
                 <p id="sub-title" class="text-md md:text-lg text-gray-600">Papan Pemuka Prestasi</p>
                 <select id="year-selector"
                     class="bg-white border border-gray-300 text-gray-700 font-bold py-1 px-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-primary cursor-pointer shadow-sm">
