--- a/index.html
+++ b/index.html
@@ -280,8 +280,14 @@
                     class="text-gray-400 hover:text-gray-600 font-semibold py-2 px-4 rounded-lg transition-all text-xs">
                     <i class="fas fa-terminal mr-1"></i> TERMINAL LOGIN
                 </button>
+                </button>
             </div>
         </footer>
+
+        <!-- Theme Toggle Floating Button -->
+        <button id="theme-toggle" class="theme-toggle-btn" aria-label="Tukar Tema">
+            <i class="fas fa-moon"></i>
+        </button>
     </div>
 
     <div id="chart-modal" class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50">
