--- a/index.html
+++ b/index.html
@@ -108,8 +108,15 @@
         <!-- Header -->
         <header class="text-center mb-8 relative">
 
-            <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">Memuatkan
-                Dashboard...</h1>
+            <div class="flex justify-center items-center gap-3 flex-wrap">
+                <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">Memuatkan
+                    Dashboard...</h1>
+                <!-- Logout Button -->
+                <button id="admin-logout-btn"
+                    class="hidden bg-red-100 text-red-600 hover:bg-red-200 px-3 py-1 rounded-lg text-xs sm:text-sm font-semibold transition-colors shadow-sm items-center border border-red-200">
+                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                </button>
+            </div>
 
             <!-- Year Selector (NEW) -->
             <div class="flex flex-col sm:flex-row justify-center items-center gap-2 mt-2">
@@ -269,11 +276,7 @@
             <!-- Footer Actions -->
             <div class="flex flex-wrap justify-center gap-3 items-center">
 
-                <!-- Logout Button (Moved here) -->
-                <button id="admin-logout-btn"
-                    class="hidden bg-red-100 text-red-600 hover:bg-red-200 px-3 py-1 rounded-lg text-sm font-semibold transition-colors shadow-sm items-center border border-red-200">
-                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
-                </button>
+
 
                 <!-- Admin Login Trigger -->
                 <button id="admin-login-btn"
