Correctly restore logout button to footer and cleanup HTML

--- a/index.html
+++ b/index.html
@@ -271,11 +271,16 @@
 
 
 
+                <!-- Logout Button (Moved here) -->
+                <button id="admin-logout-btn"
+                    class="hidden bg-red-100 text-red-600 hover:bg-red-200 px-3 py-1 rounded-lg text-sm font-semibold transition-colors shadow-sm items-center border border-red-200">
+                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                </button>
+
                 <!-- Admin Login Trigger -->
                 <button id="admin-login-btn"
                     class="text-gray-400 hover:text-gray-600 font-semibold py-2 px-4 rounded-lg transition-all text-xs">
                     <i class="fas fa-terminal mr-1"></i> TERMINAL LOGIN
-                </button>
                 </button>
             </div>
         </footer>
