Fix skeleton CSS class and update initial title

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
         <!-- Header -->
         <header class="text-center mb-8 relative">
 
-            <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">Memuatkan
-                Dashboard...</h1>
+            <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">
+                Dashboard KPI
+            </h1>
 
             <!-- Year Selector (NEW) -->
             <div class="flex flex-col sm:flex-row justify-center items-center gap-2 mt-2">
