--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard KPI Pusat Alumni (Dinamik)</title>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
