--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
         <!-- Header -->
         <header class="text-center mb-8 relative">
 
+            <!-- Global Logos -->
+            <div class="flex justify-center items-center gap-6 mb-6">
+                <img src="./images/logo-1.png" alt="Logo Utama"
+                    class="h-16 h-20 md:h-24 object-contain transition-transform hover:scale-105 duration-300">
+                <img src="./images/logo-2.png" alt="Logo Kedua"
+                    class="h-16 h-20 md:h-24 object-contain transition-transform hover:scale-105 duration-300">
+            </div>
+
             <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">
                 Dashboard KPI
             </h1>
