--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         <header class="text-center mb-8 relative">
 
             <!-- Global Logos -->
-            <div class="flex justify-center items-center gap-6 mb-6">
+            <div class="flex justify-center items-center gap-4 sm:gap-8 mb-6">
                 <img src="./images/logo-1.png" alt="Logo Utama"
-                    class="h-16 h-20 md:h-24 object-contain transition-transform hover:scale-105 duration-300">
+                    class="h-12 sm:h-16 md:h-20 object-contain transition-transform hover:scale-105 duration-300">
                 <img src="./images/logo-2.png" alt="Logo Kedua"
-                    class="h-16 h-20 md:h-24 object-contain transition-transform hover:scale-105 duration-300">
+                    class="h-12 sm:h-16 md:h-20 object-contain transition-transform hover:scale-105 duration-300">
             </div>
 
             <h1 id="main-title" class="text-2xl sm:text-3xl md:text-4xl font-bold text-brand-primary">
