--- a/index.html
+++ b/index.html
@@ -347,6 +347,31 @@
         </div>
     </div>
 
+    <!-- PWA INSTALL PROMPT BANNER -->
+    <div id="install-prompt"
+        class="fixed bottom-0 left-0 w-full bg-white dark:bg-gray-800 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] z-40 transform translate-y-full transition-transform duration-500 ease-in-out px-6 py-4 flex flex-col sm:flex-row justify-between items-center border-t border-gray-200 dark:border-gray-700 hidden">
+        <div class="flex items-center mb-3 sm:mb-0">
+            <div class="p-3 bg-blue-100 rounded-xl mr-4">
+                <img src="./images/logo-1.png" alt="App Icon" class="w-8 h-8 object-contain">
+            </div>
+            <div>
+                <h4 class="font-bold text-gray-800 dark:text-gray-100 text-sm sm:text-base">Install App KPI Alumni</h4>
+                <p class="text-xs text-gray-500 dark:text-gray-400">Akses lebih pantas & paparan penuh tanpa browser
+                    bar.</p>
+            </div>
+        </div>
+        <div class="flex gap-3 w-full sm:w-auto">
+            <button id="install-close-btn"
+                class="flex-1 sm:flex-none px-4 py-2 text-gray-500 font-semibold hover:bg-gray-100 dark:hover:bg-gray-700 rounded-lg text-sm transition-colors">
+                Nanti Dulu
+            </button>
+            <button id="install-app-btn"
+                class="flex-1 sm:flex-none px-6 py-2 bg-brand-primary text-white font-bold rounded-lg shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 transition-all text-sm">
+                Install Sekarang
+            </button>
+        </div>
+    </div>
+
     <div id="details-modal"
         class="modal fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50">
         <div class="modal-content bg-white rounded-lg shadow-2xl w-full max-w-md p-6 flex flex-col max-h-[85vh]"
