--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <div id="install-prompt"
         class="fixed bottom-0 left-0 w-full bg-white dark:bg-gray-800 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] z-40 transform translate-y-full transition-transform duration-500 ease-in-out px-6 py-4 flex flex-col sm:flex-row justify-between items-center border-t border-gray-200 dark:border-gray-700 hidden">
         <div class="flex items-center mb-3 sm:mb-0">
-            <div class="p-3 bg-blue-100 rounded-xl mr-4">
+            <div class="p-3 bg-white rounded-xl mr-4 shadow-sm border border-gray-100">
                 <img src="https://cdn-icons-png.flaticon.com/512/8921/8921024.png" alt="App Icon"
                     class="w-8 h-8 object-contain">
             </div>
