Add Open Graph Meta Tags for correct WhatsApp share preview

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Dashboard KPI Pusat Alumni (Dinamik)</title>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
 
+    <!-- Open Graph / WhatsApp Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kpipusatalumni.vercel.app/">
+    <meta property="og:title" content="Dashboard KPI Pusat Alumni">
+    <meta property="og:description" content="Sistem Pemantauan Prestasi & Data Alumni UPSI.">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
