Bust OG image cache with query parameter

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta property="og:url" content="https://kpipusatalumni.vercel.app/">
     <meta property="og:title" content="Dashboard KPI Pusat Alumni">
     <meta property="og:description" content="Sistem Pemantauan Prestasi & Data Alumni UPSI.">
-    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
+    <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png?v=2">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png">
+    <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/8921/8921024.png?v=2">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
