--- a/index.html
+++ b/index.html
@@ -280,10 +280,15 @@
         </nav>
 
         <footer class="text-center mt-12 pt-4 border-t border-gray-300 mb-12">
-            <p id="footer-note" class="text-xs text-gray-500 mb-4">
-                Data dikemaskini pada... Untuk maklumat lanjut, sila hubungi <a href="tel:+60134977187"
-                    class="text-brand-primary hover:underline font-semibold">Encik Fahman Mujib Bin Ramli</a>.
-            </p>
+            <div class="mb-4 space-y-1">
+                <p class="text-xs text-gray-500">
+                    &copy; 2025 Pusat Alumni UPSI. Hak Cipta Terpelihara.
+                </p>
+                <p class="text-xs text-gray-500">
+                    Dibangunkan Sepenuhnya Secara Inisiatif Kendiri oleh <a href="tel:+60134977187"
+                        class="text-brand-primary hover:underline font-bold">Encik Fahman Mujib Bin Ramli</a>.
+                </p>
+            </div>
 
             <!-- Footer Actions -->
             <div class="flex flex-wrap justify-center gap-3 items-center">
