Update footer credit to be more professional/humble

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     &copy; 2025 Pusat Alumni UPSI. Hak Cipta Terpelihara.
                 </p>
                 <p class="text-xs text-gray-500">
-                    Dibangunkan Sepenuhnya Secara Inisiatif Kendiri oleh <a href="tel:+60134977187"
+                    Diselenggara oleh <a href="tel:+60134977187"
                         class="text-brand-primary hover:underline font-bold">Encik Fahman Mujib Bin Ramli</a>.
                 </p>
             </div>
