Add animated tech particle background

--- a/index.html
+++ b/index.html
@@ -628,6 +628,9 @@
     <script src="config.js"></script>
     <script src="data-seed.js"></script>
 
+    <!-- Particle Effect -->
+    <script src="js/particles.js"></script>
+
     <!-- Load Main Script as Module -->
     <script type="module" src="js/main.js"></script>
 </body>
