Implement Gravity Mode (Zero G) with physics

--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
                     class="inline-block bg-yellow-100 text-yellow-800 text-xs font-semibold px-2.5 py-0.5 rounded-full border border-yellow-200">Mod
                     Lihat Sahaja</span>
             </div>
+
+            <!-- Gravity Toggle -->
+            <button id="toggle-gravity-btn"
+                class="absolute top-0 right-0 mt-2 mr-2 bg-gray-200 hover:bg-gray-300 text-gray-700 p-2 rounded-full transition-all"
+                title="Gravity Mode 👩‍🚀">
+                <i class="fas fa-rocket"></i>
+            </button>
         </header>
 
         <!-- Empty State / Clone Data Container (Hidden by default) -->
@@ -630,6 +637,7 @@
 
     <!-- Particle Effect -->
     <script src="js/particles.js"></script>
+    <script src="js/gravity.js"></script>
 
     <!-- Load Main Script as Module -->
     <script type="module" src="js/main.js"></script>
