--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                 <div class="relative w-full max-w-[300px] h-[160px] flex justify-center">
                     <canvas id="overall-gauge-chart"></canvas>
-                    <div class="absolute bottom-0 left-0 w-full text-center mb-2">
+                    <div class="absolute -bottom-2 left-0 w-full text-center">
                         <div id="gauge-value-text" class="text-4xl sm:text-5xl font-bold text-white drop-shadow-md">
                             0.00%</div>
                     </div>
