Remove speedometer needle entirely (Clean Gauge Look)

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                 <h2 class="text-xl sm:text-2xl font-semibold opacity-90 mb-2 relative z-10">Pencapaian Keseluruhan</h2>
 
                 <div class="relative w-full max-w-[300px] h-[160px] flex justify-center">
-                    <canvas id="overall-gauge-chart" class="relative z-10"></canvas>
-                    <div class="absolute -bottom-2 left-0 w-full text-center z-0">
+                    <canvas id="overall-gauge-chart"></canvas>
+                    <div class="absolute -bottom-2 left-0 w-full text-center">
                         <div id="gauge-value-text" class="text-4xl sm:text-5xl font-bold text-white drop-shadow-md">
                             0.00%</div>
                     </div>
