--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <select id="year-selector"
                     class="bg-white border border-gray-300 text-gray-700 font-bold py-1 px-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-brand-primary cursor-pointer shadow-sm">
                     <option value="2025">2025</option>
-                    <option value="2026">2026</option>
+                    <option value="2026" selected>2026</option>
                     <option value="2027">2027</option>
                 </select>
             </div>
