--- a/index.html
+++ b/index.html
@@ -258,10 +258,17 @@
 
         <!-- Add KPI Button (Admin Only) -->
         <div id="add-kpi-container" class="hidden mt-8 text-center">
-            <button id="open-add-kpi-modal-btn"
-                class="bg-gray-800 text-white px-8 py-3 rounded-xl font-bold hover:bg-gray-900 shadow-xl transform hover:scale-105 transition-all border border-gray-700">
-                <i class="fas fa-plus-circle mr-2"></i>Tambah KPI Baru
-            </button>
+            <div class="flex justify-center gap-2">
+                <button id="open-add-kpi-modal-btn"
+                    class="bg-gray-800 text-white px-8 py-3 rounded-xl font-bold hover:bg-gray-900 shadow-xl transform hover:scale-105 transition-all border border-gray-700">
+                    <i class="fas fa-plus-circle mr-2"></i>Tambah KPI Baru
+                </button>
+                <button id="re-clone-btn"
+                    class="bg-gray-600 text-white px-8 py-3 rounded-xl font-bold hover:bg-gray-700 shadow-xl transform hover:scale-105 transition-all border border-gray-500"
+                    onclick="if(confirm('AMARAN: Ini akan memadam semua data 2026 dan menyalin semula dari 2025 dgn struktur FIX. Data lama 2026 akan hilang forever. Teruskan?')) window.clone2025()">
+                    <i class="fas fa-sync-alt mr-2"></i> Fix/Reset 2025
+                </button>
+            </div>
         </div>
 
         <nav aria-label="Navigasi suku tahunan" class="flex justify-center gap-2 mt-12">
