Fix: Rename Mod Guest to Paparan Awam and force cache refresh

--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     </div>
 
     <!-- Load Main Script as Module -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/main.js?v=2.0"></script>
 </body>
 
 </html>
